// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Tooltip arrowVue demo works fine 1`] = `
<div>
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       带箭头文字提示 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Tooltip Tooltip baseVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-placement"
>
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement top center"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       top 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement top left"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       top-left 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement top right"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       top-right 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement bottom center"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       bottom 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement bottom left"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       bottom-left 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement bottom right"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       bottom-right 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement align"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       left 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement top-align"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       left-top 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement bottom-align"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       left-bottom 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement right-full align"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       right 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement right-full top-align"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       right-top 
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default placement right-full bottom-align"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       right-bottom 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Tooltip Tooltip durationVue demo works fine 1`] = `
<div>
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-is-disabled"
    disabled=""
    duration="5000"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      定时消失
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Tooltip Tooltip noArrowVue demo works fine 1`] = `
<div>
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       不带箭头的文字提示 
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Tooltip Tooltip themeVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-demo"
>
  
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      default
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      primary
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-success"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      success
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-danger"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      danger
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-warning"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      warning
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-light"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      light
      
    </span>
  </button>
  <!---->
  
</div>
`;

exports[`Tooltip Tooltip triggerVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-demo"
>
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      悬浮时触发（默认）
      
    </span>
  </button>
  <!---->
  
  
  <div
    class="t-input__wrap"
    theme="default"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="获得焦点时触发"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      点击时触发
      
    </span>
  </button>
  <!---->
  
  
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      右击时触发
      
    </span>
  </button>
  <!---->
  
</div>
`;
